--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.main.allow-bean-definition-overriding=true
+
 logging.level.org.springframework=DEBUG
 logging.level.com.howtodoinjava=DEBUG
  
