--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,18 @@
 	<artifactId>sonarqube-reporting-app</artifactId>
 	<version>1.0.0</version>
 	<name>sonarqube-reporting-app</name>
-	<description>SonarQube App for downloading different analysis reports in different file formats like XLS,PDF, etc.</description>
+	<description>SonarQube App for downloading different analysis reports
+		in different file formats like XLS,PDF, etc.</description>
 	<packaging>jar</packaging>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -72,7 +77,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		   <finalName>sonarqube-reporting-app</finalName>
+		<finalName>sonarqube-reporting-app</finalName>
 	</build>
 
 </project>
