--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,24 @@
 	<artifactId>sonarqube-reporting-app</artifactId>
 	<version>1.0.0</version>
 	<name>sonarqube-reporting-app</name>
-	<description>SonarQube App for downloading different analysis reports
-		in different file formats like XLS,PDF, etc.</description>
+	<description>SonarQube App for downloading different analysis reports in different file formats like XLS,PDF, etc.</description>
 	<packaging>jar</packaging>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
@@ -68,6 +78,13 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.17</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
